Bug 161023 - FILESAVE: ODP: Incorrect spacing in list
Summary: FILESAVE: ODP: Incorrect spacing in list
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-05-10 10:49 UTC by Xisco Faulí
Modified: 2024-05-13 03:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (159.06 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2024-05-10 10:49 UTC, Xisco Faulí
Details
comparison before and after (255.84 KB, image/png)
2024-05-10 10:50 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-05-10 10:49:38 UTC
Created attachment 194067 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save as ODP
3. Open the new generated document

-> The list overlaps the shape at the bottom

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 11c66ea0f49417a30aae1ff250f7f18ec797753e
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-05-10 10:50:35 UTC
Created attachment 194068 [details]
comparison before and after
Comment 2 Xisco Faulí 2024-05-10 10:51:43 UTC
regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2024-04-24 07:55:35 +0500
committer	Mike Kaganski <mike.kaganski@collabora.com>	2024-04-24 11:37:27 +0200
commit 69ed893087f89d176a5ec4b263ce8d75774be72b (patch)
tree 95a24d99a458dad12520977dad8c44ca3d1b9a89
parent dfb412699b96e12b2758be0e422c3e775f183d17 (diff)
tdf#160253: fix list identifier export decision code

Bisected with: bibisect-linux64-24.8
Comment 3 Mike Kaganski 2024-05-12 17:55:56 UTC
https://gerrit.libreoffice.org/c/core/+/167557
Comment 4 Commit Notification 2024-05-13 02:21:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2ca93eb5df7ddb8641ff7d884a109261c9700aca

tdf#161023: Empty spans may only define paragraph marks in text documents

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.