tdf#161023: Empty spans may only define paragraph marks in text documents

Change-Id: I40607652a0fd8e31c609732daa54bb796e3fffa0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167557
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>